--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
             doloribus suscipit reprehenderit molestiae, nostrum aperiam sed est repellat nihil architecto unde amet
             autem. Commodi, ullam?</p>
     </div>
+    <form>
+        <label></label>
+        <input>
+        <label></label>
+        <input>
+        <label></label>
+        <input>
+    </form>
 </body>
 
 </html>
